Groups interface changes
SysAdmins can add users to group directly
Show emails in group members list
Some changes in group lightboxes: change removal buttons color from black to red, add header 'Name' in settings
Some changes in all lightboxes: enlarge close button and modal-title
Add access to group via autocomplete by login or name
New interface for removing and archiving groups
Notifications about accesses to group: granted access and revoked access
Change owner of group
User can revoke access for himself

Fix avatar placeholder
Fix fonts on iOS, macOS and others

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-	font-family: "Segoe UI";
+	padding-top: 50px;
+	padding-bottom: 20px;
+	font-family: "Segoe UI", Arial, sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -200,4 +200,9 @@ footer:hover {
 /* Small buttons*/
 .btn-group-xs > .btn, .btn-xs {
 	padding: 1px 7px 3px;
+}
+
+/* Fixes for jquery-ui */
+.ui-front {
+	z-index: 1100;
 }
