--- a/src/uLearn.Web/Content/modals.css
+++ b/src/uLearn.Web/Content/modals.css
@@ -5,14 +5,25 @@
 
 .modal-title {
 	display: inline-block;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 500;
+	letter-spacing: 0.2px;
+}
+
+.modal-header .close {
+	font-size: 26px;
+	font-weight: 400;
+	margin-bottom: -15px;
+}
+
+.modal .form-control {
+	max-width: none;
 }
 
 /* Modal header tabs*/
 .modal-header__tabs {
 	margin: 0;
-	margin-top: -15px;
+	margin-top: -14px;
 	margin-bottom: -15px;
 	padding-left: 0;
 	font-size: 16px;
@@ -45,7 +56,7 @@
 	pointer-events: none;
 	color: black;
 	border-bottom-width: 0;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 .modal-body .tab-pane {
