--- a/src/uLearn.Web/Views/Admin/_GroupAccess.cshtml
+++ b/src/uLearn.Web/Views/Admin/_GroupAccess.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Database.Models
+@using Microsoft.AspNet.Identity
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 
@@ -16,7 +17,9 @@
 			</div>
 		}
 
-		<div>@Model.Access.User.VisibleName</div>
+		<div>
+			@Model.Access.User.VisibleName
+		</div>
 		<div class="group__access__role help-block">
 			@if (Model.Access.AccessType == GroupAccessType.Owner)
 			{
@@ -24,7 +27,22 @@
 			}
 			else
 			{
-				<text>Полный доступ предоставлен @Model.Access.GrantedBy.VisibleName @Model.Access.GrantTime.ToAgoPrettyString()</text>
+				<text>Полный доступ предоставлен @Model.Access.GrantedBy.VisibleName <span title="@Model.Access.GrantTime.ToPrettyString()">@Model.Access.GrantTime.ToAgoPrettyString()</span></text>
+			}
+		</div>
+		<div>
+			@{
+				var iAmGroupOwner = Model.Access.Group.OwnerId == User.Identity.GetUserId();
+			}
+			@if (iAmGroupOwner && Model.Access.AccessType != GroupAccessType.Owner)
+			{
+				<form action="@Url.Action("ChangeGroupOwnerApi")" onsubmit="return false;">
+					@Html.AntiForgeryToken()
+					@Html.Hidden("courseId", Model.Access.Group.CourseId)
+					@Html.Hidden("groupId", Model.Access.GroupId)
+					@Html.Hidden("newOwnerId", Model.Access.UserId)
+					<a href="#" class="group__access__change-owner-link">Сделать владельцем</a>
+				</form>
 			}
 		</div>
 
