Group copying inside course: add "(копия)", copy scoring group settings and accesses
Show provider if linking failed. Show account login in user with same link already exists
Change Stepik export button color
Redirect to page after KonturPassportRequired if all is ok
Fix bug in DropdownWithAttributes

--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -27,7 +27,7 @@
 			<div class="row">
 				<section id="externalLogins" class="col-sm-10 col-sm-offset-2">
 					@Html.Action("RemoveAccountList")
-					@Html.Action("ExternalLoginsListPartial", "Login", new ExternalLoginsListModel { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl, Type = ExternalLoginListType.Link })
+					@Html.Action("ExternalLoginsListPartial", "Login", new ExternalLoginsListModel { Action = "DoLinkLogin", ReturnUrl = ViewBag.ReturnUrl, Type = ExternalLoginListType.Link })
 				</section>
 			</div>
 		</div>
