--- a/src/uLearn.Web/Views/Login/LinkLogin.cshtml
+++ b/src/uLearn.Web/Views/Login/LinkLogin.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uLearn.Web.Controllers.LinkLoginViewModel
 
-@using (Html.BeginForm("LinkLogin", "Login", new { provider = Model.Provider, returnUrl = Model.ReturnUrl }, FormMethod.Post, new { id = "link-login-form" }))
+@using (Html.BeginForm("DoLinkLogin", "Login", new { provider = Model.Provider, returnUrl = Model.ReturnUrl }, FormMethod.Post, new { id = "link-login-form" }))
 {
 	@Html.AntiForgeryToken()
 }
