Fix foreign keys: removing users, removing additional scores are ok now

--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -171,9 +171,9 @@
 			@UserAvatar.Avatar(notification.InitiatedBy)
 		</div>
 		<div class="media-body">
-			<div class="notifications__notification__header">@UserName(notification.InitiatedBy) поставил@( notification.InitiatedBy.Gender.ChooseEnding()) вам баллы <i>@scoringGroup.Name</i> в&nbsp;модуле «@unit.Title»
+			<div class="notifications__notification__header">@UserName(notification.InitiatedBy) поставил@( notification.InitiatedBy.Gender.ChooseEnding()) вам баллы <b>@scoringGroup.Name</b> в&nbsp;модуле «@unit.Title»
 			</div>
-			<div class="notifications__notification__score">@notification.Score.Score из @scoringGroup.MaxAdditionalScore.PluralizeInRussian(RussianPluralizationOptions.ScoreDative)</div>
+			<div class="notifications__notification__score"><b>@notification.Score.Score из @scoringGroup.MaxAdditionalScore.PluralizeInRussian(RussianPluralizationOptions.ScoreDative)</b></div>
 			<div class="notifications__notification__footer" title="@notification.CreateTime.ToPrettyString()">@notification.CreateTime.ToAgoPrettyString()</div>
 		</div>
 	</div>
